# audacious-uade

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  NOTICE  README  README.md  configure.ac  make_release.sh  uade.patch
audacious-uade/: .cproject  .project
brew/: audacious-uade.rb
conf/: aminet.tsv  contentdb  eagleplayer.conf  modland_incoming.tsv  modsanthology.tsv  song.conf  uade.conf  uaerc  unexotica.tsv  wantedteam.tsv  zakalwe.tsv
conf/songdb/: aminet.tsv  amp.tsv  combined.tsv  demozoo.tsv  md5idx.tsv  metadata.tsv  modinfos.tsv  modland.tsv  modland_incoming.tsv  modsanthology.tsv  songdb2.tsv  songlengths.tsv  unexotica.tsv  wantedteam.tsv  xxh32idx.tsv  zakalwe.tsv
debian/: control  make_deb.sh
scripts/: PKGBUILD  android.sh  audacious-uade.spec  cosmocc.sh  default.nix  fuchsia.sh  ios.sh  make_deb.sh  make_rpm.sh  release.sh  sanitize.sh  ubignorelist.txt  wasix.sh
scripts/crossbuild/: amigaos.sh  amigaos4.sh  android.sh  aros.sh  blackberry10.sh  cosmocc.sh  emscripten.sh  freemint.sh  fuchsia.sh  genode.sh  ios.sh  irix.sh  morphos.sh  openharmony.sh  ps4.sh  qnx710.sh  qnx800.sh  redox.sh  riscos.sh  sailfish.sh  serenity.sh  tizen.sh  warpos.sh  webos.sh
scripts/crossbuild/wip/: 3ds.sh  dos.sh  dreamcast.sh  genode.sh  nds.sh  ps2.sh  ps3.sh  psp.sh  psvita.sh  switch.sh  symbian.sh  vxworks.sh  wasix.sh  wiiu.sh  xbox.sh  xbox360.sh
scripts/debian/: changelog  changelog.in  control  rules
src/: .gitignore  Makefile.am  common.h  extensions.h  hacks.c  hacks.cc  hacks.h  modland.c  modland.cc  modland.h  plugin.c  plugin.cc  prefs.h  songdb.cc  songdb.h  uade_common.cc  uade_common.h  uade_config.cc  uade_config.h
src/common/: Makefile.am.inc  big_endian.h  common.h  compat.h  constexpr.h  crc64.h  endian.h  extensions.h  foreach.h  getdelim.c  getdelim.h  logger.h  macos_endian.h  md5.cc  md5.h  portable_endian.h  songend.h  strings.h
src/common/std/: functional.h  optional.h  string_view.h
src/converter/: .gitignore  Makefile.am  Makefile.am.inc  big_endian.h  common_med.cc  common_med.h  converter.cc  converter.h  converter_main.cc  converter_med4.cc  io.h
src/converter/med/: common_med.cc  common_med.h  converter_med4.cc
src/player/: Makefile.am  Makefile.am.inc  extensions.h  foreach.h  player.cc  player.h  player_dbm.cc  player_hvl.cc
src/player/players/: internal.h  player_dbm.cc  player_ft2play.cc  player_hivelytracker.cc  player_hvl.cc  player_it2play.cc  player_libdigibooster3.cc  player_libopenmpt.cc  player_libxmp.cc  player_noisetrekker2.cc  player_protrekkr.cc  player_protrekkr1.cc  player_protrekkr2.cc  player_st23play.cc  player_st3play.cc  player_uade.cc
src/plugin/audacious/: Makefile.am  Makefile.am.inc  logger.cc  plugin.cc  prefs.h  uade_config.cc  uade_config.h  uade_prefs.h
src/plugin/cli/: .gitignore  Makefile.am.inc
src/plugin/cli/common/: compat.cc  logger.cc  tinynew.cc
src/plugin/cli/converter/: converter_main.cc
src/plugin/cli/player/: player_main.cc
src/plugin/cli/precalc/: precalc.sh  precalc_main.cc
src/plugin/cli/songdb/: songdb_main.cc
src/plugin/cli/songend/: songend_main.cc
src/plugin/common/: copyright.h
src/plugin/deadbeef/: Makefile.am.inc  logger.cc  plugin.cc
src/songdb/: .gitignore  Makefile.am  Makefile.am.inc  amp.cc  blacklist.cc  internal.h  modland.cc  modland.h  songdb.cc  songdb.h  songdb.sh  uade_songend  uade_songend_main.cc  unexotica.cc
src/songdb/sources/: amp.cc  demozoo.cc  generic.cc  modland.cc  unexotica.cc
src/songend/: .gitignore  Makefile.am  Makefile.am.inc  detector.cc  detector.h  precalc.cc  precalc.h  songdb.sh  songend.cc  songend.h  songend_main.cc  uade_songend_main.cc
src/test/: Makefile.am.inc  md5_main.cc  test_converter.sh  test_player.sh  test_songdb.sh
src/test/common/: check.sh  header.sh
src/test/converter/: test_converter.sh
src/test/player/: test_player1.sh  test_player10.sh  test_player11.sh  test_player12.sh  test_player13.sh  test_player14.sh  test_player17.sh  test_player18.sh  test_player19.sh  test_player2.sh  test_player3.sh  test_player4.sh  test_player5.sh  test_player6.sh  test_player7.sh  test_player8.sh  test_player9.sh  test_player_ft2play_1.sh  test_player_ft2play_2.sh  test_player_ft2play_3.sh  test_player_hivelytracker_1.sh  test_player_it2play_1.sh  test_player_it2play_2.sh  test_player_it2play_3.sh  test_player_it2play_4.sh  test_player_it2play_5.sh  test_player_it2play_6.sh  test_player_it2play_7.sh  test_player_it2play_8.sh  test_player_it2play_9.sh  test_player_libdigibooster3_1.sh  test_player_libdigibooster3_2.sh  test_player_libopenmpt_1.sh  test_player_libopenmpt_2.sh  test_player_libxmp_1.sh  test_player_libxmp_2.sh  test_player_noisetrekker2_1.sh  test_player_protrekkr1_1.sh  test_player_protrekkr2_1.sh  test_player_protrekkr_1.sh  (+8 more)
src/test/precalc/: test_precalc1.sh  test_precalc10.sh  test_precalc11.sh  test_precalc12.sh  test_precalc13.sh  test_precalc2.sh  test_precalc3.sh  test_precalc4.sh  test_precalc5.sh  test_precalc6.sh  test_precalc7.sh  test_precalc8.sh  test_precalc9.sh
src/test/songdb/: test_songdb.sh  test_songdb1.sh  test_songdb2.sh  test_songdb3.sh
src/test/songend/: test_songend.sh
src/uade/: Makefile.am  hacks.cc  hacks.h  uade_common.cc  uade_common.h
testdata/: DBM.Tower Of The Six Winds  MOD.forbidden pineapples  aulral.mod  burgertime mix.xm  chipsong.med  dimension five.bp  exquisiet.ahx  ezisopth.it  gyroscope.mon  happiness.s3m  hash-tu-raz 2.digi  i wanna show you all my warez.ahx  introduction3.sa  karatekid2.cus  long white clouds.it  mdat.turrican loader  miracle man.s3m  mizzle.it  mod.orchannel  monkmusings.hvl  nes song thingy.s3m  oldskoolcrackintrosong.ahx  posse's theme.stm  rubber spine.ahx  smpl.turrican loader  space blipper.sa  spaz on jazz.it  superhyllorejv.xm  syoa.s3m  tomaatti.dbm  trip to hell.dbm
tools/: contentdb.sh  modland_amiga_dirs.txt  modlandfilter.sh  modlandincomingsymlink.sh  modlandsymlink.sh
tools/modland/: modland_amiga_dirs.txt  modlandfilter.sh  modlandincomingsymlink.sh
tools/songdb/: songdb.sc
(+22 files in other folders)
